k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgoat-service
  labels:
    app: webgoat-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 443
    nodePort: 32185
  selector:
    app: webgoat
  sessionAffinity: None
